# PythonDataScienceHandbook

./: pyproject.toml
.github/: copilot-instructions.md
notebooks/: 02.02-The-Basics-Of-NumPy-Arrays.ipynb  05.01-What-Is-Machine-Learning.ipynb  05.02-Introducing-Scikit-Learn.ipynb  05.03-Hyperparameters-and-Model-Validation.ipynb  05.04-Feature-Engineering.ipynb  05.05-Naive-Bayes.ipynb  05.06-Linear-Regression.ipynb  05.07-Support-Vector-Machines.ipynb  05.08-Random-Forests.ipynb
