[project]
name = "pythondatasciencehandbook"
version = "0.1.0"
description = "A Python Data Science Handbook"
authors = [
    { name = "Jake VanderPlas" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numexpr>=2.14.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pandas-datareader>=0.10.0",
    "pillow>=12.1.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
    "scipy-stubs>=1.17.1.5",
]
